--- a/calculator.css
+++ b/calculator.css
@@ -6,6 +6,8 @@ $color3: #e8d3db;
 $color4: #4e5152;
 $color5: #cc828f; */
 
+/*font*/
+url("https://use.typekit.net/vtx6nlc.css");
 
 body,
 html {
@@ -31,12 +33,16 @@ html {
         0 10px 20px 0 darken(#cc828f, 30);
 
     text-align: center;
+    font-display: auto;
+    font-style: normal;
+    font-weight: 400;
+    font-family: "cairo", sans-serif;
 
     p#title {
         padding-top: 10px;
         margin-bottom: -10px;
         color: darken(#4e5152);
-        font-family: ""cairo"", sans-serif;
+        font-family: "cairo", sans-serif;
     }
 
     p#tagline {
@@ -74,7 +80,7 @@ html {
             border-top: 2px solid lighten(#d49aaf, 20);
             @include background-image(linear-gradient(to bottom, #d49aaf, darken(#d49aaf, 10)));
             color: #e8d3db;
-            font-size: 1.1em;
+            font-size: 2.2em;
             border-radius: 20%;
             border-top-left-radius: 80%10px;
             border-top-right-radius: 80%10px;
@@ -95,7 +101,7 @@ html {
                 @include background-image(linear-gradient(to top, #d49aaf, darken(#d49aaf, 10)));
             }
 
-        }
+        };
 
         .ctrl {
             border: 1px solid #d49aaf;
@@ -107,7 +113,7 @@ html {
             &:active {
                 @include background-image(linear-gradient(to top, #d49aaf, darken(#d49aaf, 10)));
             }
-        }
+        };
 
-    }
+    };
 }
