--- a/calculator.css
+++ b/calculator.css
@@ -9,111 +9,124 @@ $color5: #cc828f; */
 /*font*/
 url("https://use.typekit.net/vtx6nlc.css");
 
-body,
 html {
-    width: 100%;
-    background-color: #ffffff;
-}
+    box-sizing: border-box;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    box-sizing: inherit;
+  }
+  
+  body {
+    margin: 0;
+  }
 
-.calculator {
-    width: 250px;
-    height: 335px;
-    background-color: #fbc4cd;
-    margin: 0 auto;
-
-    border-top-left-radius: 80%20px;
-    border-top-right-radius: 80%20px;
-    border-bottom-left-radius: 80%20px;
-    border-bottom-right-radius: 80%20px;
-
-    box-shadow: inset 5px 0 10px -5px darken(#cc828f, 20),
-        inset -5px 0 10px -5px darken(#cc828f, 20),
-        inset 0px -5px 10px -2px darken(#cc828f, 20),
-        0 0 1px 2px darken(#cc828f, 20),
-        0 10px 20px 0 darken(#cc828f, 30);
-
+  input,
+  textarea,
+  button {
+    border: 0;
+    border-radius: 0;
+    background-color: transparent;
+    font-size: inherit;
+    font-family: inherit;
+    font-weight: inherit;
+    outline: none;
+    appearance: none;
+    text-align: left;
+  }
+  
+  input:hover,
+  input:active,
+  input:focus,
+  textarea:hover,
+  textarea:active,
+  textarea:focus,
+  button:hover,
+  button:active,
+  button:focus {
+    outline: none;
+  }
+  
+  :root {
+    font-family: Helvetica, Arial, sans-serif;
+  }
+  
+  html {
+    font-size: 175%;
+    font-weight: 300;
+    line-height: 1.3;
+  }
+  
+  body {
+    align-items: center;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+  }
+  
+  .container {
+    max-width: 20em;
+  }
+  
+  .container > p {
     text-align: center;
-    font-display: auto;
-    font-style: normal;
-    font-weight: 400;
-    font-family: "cairo", sans-serif;
-
-    p#title {
-        padding-top: 10px;
-        margin-bottom: -10px;
-        color: darken(#4e5152);
-        font-family: "cairo", sans-serif;
-    }
-
-    p#tagline {
-        color: #4e5152;
-        font-family: "cairo", sans-serif;
-        font-size: .7em;
-    }
-
-    input[type='text'] {
-        background-color: $#e8d3db;
-        border: 1px solid darken($#e8d3db, 10);
-        line-height: 50px;
-        width: 80%;
-        font-size: 2em;
-        direction: rtl;
-        font-family: "cairo", sans-serif;
-        padding-right: 10px;
-        margin-bottom: 20px;
-        border-radius: 5px;
-        box-shadow: inset 0px -2px 10px darken($#e8d3db, 10);
-
-        &:focus {
-            outline: none;
-        }
-    }
-
-
-    .row {
-        display: block;
-
-        button {
-            width: 40px;
-            height: 30px;
-            border: 1px solid #d49aaf;
-            border-top: 2px solid lighten(#d49aaf, 20);
-            @include background-image(linear-gradient(to bottom, #d49aaf, darken(#d49aaf, 10)));
-            color: #e8d3db;
-            font-size: 2.2em;
-            border-radius: 20%;
-            border-top-left-radius: 80%10px;
-            border-top-right-radius: 80%10px;
-            border-bottom-left-radius: 100%10px;
-            border-bottom-right-radius: 100%10px;
-            margin-left: 5px;
-            margin-right: 5px;
-            margin-bottom: 8px;
-            box-shadow: inset 0 1px 4px lighten(#d49aaf, 20),
-                inset 0 -4px 20px darken(#d49aaf, 10),
-                0 3px 1px 0 darken(#d49aaf, 10);
-
-            &:focus {
-                outline: 0;
-            }
-
-            &:active {
-                @include background-image(linear-gradient(to top, #d49aaf, darken(#d49aaf, 10)));
-            }
-
-        };
-
-        .ctrl {
-            border: 1px solid #d49aaf;
-            border-top: 2px solid lighten(#d49aaf, 20);
-            @include background-image(linear-gradient(to bottom, #d49aaf, darken(#d49aaf, 10)));
-            box-shadow: inset 0 1px 4px lighten(#d49aaf, 20),
-                inset 0 -4px 20px darken(#d49aaf, 10);
-
-            &:active {
-                @include background-image(linear-gradient(to top, #d49aaf, darken(#d49aaf, 10)));
-            }
-        };
-
-    };
-}
+  }
+  
+  .calculator {
+    border-radius: 12px;
+    box-shadow: 0 0 40px 0px #fbc4cd;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2em;
+    max-width: 15em;
+    overflow: hidden;
+  }
+  
+  .calculator__display {
+    background-color: #fbc4cd;
+    color: #fff;
+    font-size: 1.714285714em;
+    padding: 0.5em 0.75em;
+    text-align: right;
+  }
+  
+  .calculator__keys {
+    background-color: #eee;
+    display: grid;
+    grid-gap: 1px;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  
+  .calculator__keys > * {
+    background-color: #e8d3db;
+    padding: 0.5em 1.25em;
+    position: relative;
+    text-align: center;
+  }
+  
+  .calculator__keys > *:active::before,
+  .calculator__keys > .is-depressed::before {
+    background-color: #4e5152;
+    bottom: 0;
+    box-shadow: 0 0 6px 0 #4e5152 inset;
+    content: "";
+    left: 0;
+    opacity: 0.3;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 1;
+  }
+  
+  .key--operator {
+    background-color: #f3d4e0;
+  }
+  
+  .key--equal {
+    background-color: #f894a6;
+    grid-column: -2;
+    grid-row: 2 / span 4;
+  }
+  
